201804020
Adds support for Logitech C270 Webcam
Adds variable reset delay for webcams
Updated Test Rig software
Info screen improvements
Set Call, locator and PIDs from touchscreen
Set and select ADF Ref from touchscreen
Commence software update from touchscreen

201803181
Adds support for Logitech C910 Webcam

201803180
Handles Logitech C525 post-transmit reset better
Corrects USB Mic selection when Webcam connected

201803061
Adds Webcam as a separate switched video and audio source
Logitech C920, C525 and C170 webcams work as video sources
Makes test cards and contest numbers available for both H264 and MPEG-2
Adds some 16:9 and 720p modes
Enables caption on streaming modes and allows longer captions
Adds support for native 1080p H264 and audio streaming from the Logitech C920
SigGen supports the Elcom microwave oscillators (select ADF5355..)
New Logo
Keyboard improvements

201802202
Restores "save-to-USB" capability
Enables C920 Webcam
Instant band switching
Decreases Attenuator spi clock frequency for reliability
Corrects bug that did not copy presets across on upgrade

201802041
Major touchscreen menu re-write
Introduces new gui sub-menus for parameter and config selection
Introduces attenuator and transverter switching
Introduces stored preset configurations
Initialises spi GPIO ports on GUI start-up
Corrects ADF4351 and Attenuator spi timing to improve reliability
Corrects FileTS failure to cease transmitting 
Adds partial support (Video only) for Logitech C525 and C270 Webcams

201801220
Introduces new gui sub-menus for parameter and config selection
Major menu rewrite in prep for transverter switching
Initialises spi GPIO ports on GUI start-up
Corrects ADF4351 and Attenuator spi timing to improve reliability
Add partial support (Video only) for Logitech C525 and C270 Webcams

201801061
Introduces attenuator option for Portsdown output in SigGen
Adds attenuator option to Portsdown and ADF4351 modes in SigGen
Enables DATV Express SigGen