@@ -4,5 +4,5 @@ cd /home/pi
 reset
 sudo killall fbcp >/dev/null 2>/dev/null
 fbcp &
-/home/pi/rpidatv/bin/rpidatvgui 1
+/home/pi/rpidatv/bin/rpidatvgui
 
